# CarRacing-worldmodels

./: .gitignore  controller.pt  extract_experiences.py  model.pt  pyproject.toml  requirements.txt  student.py  test.ipynb
models/: C.py  M.py  V.py  V_att.py
