[project]
name = "car-racing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "cma>=4.4.1",
    "gymnasium[box2d]==0.29.1",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "moviepy>=1.0.3",
    "numpy==1.24.4",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "shapely>=2.1.2",
    "torch>=2.8.0",
    "torchvision>=0.24.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
